# 3d-maze-shooter

./: .gitignore  CMakeLists.txt  README.md  build.py  clean.py  settings.csv.example
dependencies/2D/: CMakeLists.txt
dependencies/2D/src/: interface.cpp  interface.h  vector_font.cpp  vector_font.h
dependencies/3D/: CMakeLists.txt  game_engine.txt
dependencies/3D/src/: edge2i.cpp  edge2i.h  face3i.cpp  face3i.h  frame.cpp  frame.h  matrix.cpp  matrix.h  n_defs.h  point2f.cpp  point2f.h  point3f.cpp  point3f.h  scene3d.cpp  scene3d.h  simple_mesh.cpp  simple_mesh.h
dependencies/utils/: CMakeLists.txt  utils.txt
dependencies/utils/src/: bmpreader.cpp  bmpreader.h  options.cpp  options.h  wavereader.cpp  wavereader.h
engine/src/: app.cpp  app.h  colors.cpp  colors.h  gui.cpp  gui.h  points.cpp  points.h  resource.h  scene.cpp  scene.h
engine/src/unix/: 1  main.cpp  main_png.cpp
game_engine_cdb/games/png1/: makefile
game_engine_cdb/games/temp10/: about_form.cpp  about_form.h  game.cpp  game.h  lmain.cpp  lmain.h  makefile  my_form1.h  settings.csv  steps.txt
game_engine_cdb/games/temp11/: game.cpp  game.h  makefile
game_engine_cdb/games/temp9/: game.cpp  game.h  my_form1.cpp  my_interface.cpp  my_interface.h  opt_form.cpp  opt_form.h  settings.csv  steps.txt  temp8.depend  temp8.layout  temp9.cbp  temp9.depend  temp9.layout  wmain.cpp  wmain.h
game_engine_cdb/libs/1/png-1.6.18/: config.h  mymakefile2
game_engine_cdb/libs/1/zlib-1.2.5/: mymakefile
game_engine_cdb/libs/libpng-1.6.18/: Makefile  config.status  libpng16-config  libpng16.la  libpng16.pc  libtool  png-fix-itxt  pngfix  pngimage  pnglibconf.c  pngstest  pngtest  pngunknown  pngvalid
game_engine_cdb/libs/libpng-1.6.18/.deps/: png.Plo  pngerror.Plo  pngget.Plo  pngmem.Plo  pngpread.Plo  pngread.Plo  pngrio.Plo  pngrtran.Plo  pngrutil.Plo  pngset.Plo  pngtest.Po  pngtrans.Plo  pngwio.Plo  pngwrite.Plo  pngwtran.Plo  pngwutil.Plo
game_engine_cdb/libs/libpng-1.6.18/.libs/: libpng16.lai  libpng16.so.16.18.0  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid
game_engine_cdb/libs/libpng-1.6.18/contrib/libtests/.deps/: pngimage.Po  pngstest.Po  pngunknown.Po  pngvalid.Po
game_engine_cdb/libs/libpng-1.6.18/contrib/tools/.deps/: png-fix-itxt.Po  pngfix.Po
game_engine_cdb/libs/libpng-1.6.18/scripts/: makefile.linux
game_engine_cdb/libs/zlib-1.2.5/: compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.5  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zutil.lo
game_engine_cdb/libs/zlib-1.2.5/examples/: gfgb.dg  zpipe  zpipeforgame
game_engine_cdb/lofting/: loft_util.cbp  loft_util.depend  loft_util.layout  main.c
game_engine_cdb/rc/: обозначения.txt
game_engine_cdb/rc/fonts/: 1.font  gostA.font
game_engine_cdb/rc/meshes/: 100x100.csv  100x100.xlsx  cub.csv  cub.xls  cub0.csv  cub1.csv  hrt2.csv  hrt_small.csv  key.csv  key.xlsx  labirint.csv  Копия л2.csv  Копия л2.xlsx  л2.csv  лабиринт.xls
game_engine_cdb/rc/textures/: Thumbs.db
game_engine_cdb/src/2D/: interface.cpp  interface.h  vector_font.cpp  vector_font.h
game_engine_cdb/src/3D/: edge2i.cpp  edge2i.h  face3i.cpp  face3i.h  frame.cpp  frame.h  game_engine.txt  matrix.cpp  matrix.h  n_defs.h  point2f.cpp  point2f.h  point3f.cpp  point3f.h  scene3d.cpp  scene3d.h  simple_mesh.cpp  simple_mesh.h
game_engine_cdb/src/openAL/: CWaves.cpp  CWaves.h
game_engine_cdb/src/utils/: bmpreader.cpp  bmpreader.h  options.cpp  options.h  utils.txt
src/: about_form.cpp  about_form.h  game.cpp  game.h  lmain.cpp  my_form1.cpp  my_form1.h  my_interface.cpp  my_interface.h  opt_form.cpp  opt_form.h
